slurm-1264.out
Could not find conda environment: tensorflo
You can list all discoverable environments with `conda info --envs`.

Argument expected for the -c option
usage: python [option] ... [-c cmd | -m mod | file | -] [arg] ...
Try `python -h' for more information.
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/GPU_Check.py", line 3
    print "VERSION", tf.__version__sess = tf.Session(config=tf.ConfigProto(log_device_placement=True)) 
                                        ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/TestandTrain1NetConfig1AI.py", line 1, in <module>
    import matplotlib
ImportError: No module named matplotlib
Traceback (most recent call last):
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/compare_truth.py", line 1, in <module>
    import numpy as np
ImportError: No module named numpy
